<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerAddContact_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/leftHeaderText_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerLeft"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:layout_weight="1"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/textCenterText_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerCenter"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/rightHeaderText_txtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/headerRight"
            android:textColor="@android:color/white"
            android:layout_gravity="center_vertical"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_weight="1"
            />


    </LinearLayout>

</LinearLayout>
