<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.MasterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:id="@+id/categoryMerchantMaster_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <RelativeLayout
                android:id="@+id/categoryMaster_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_rectangle"
                >
                <ImageView
                    android:padding="10dp"
                    android:id="@+id/categoryMaster_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add_btn"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/categoryMaster_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_type"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/categoryMaster_iv"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/companyMaster_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_rectangle"
                >
                <ImageView
                    android:padding="10dp"
                    android:id="@+id/companyMaster_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add_btn"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/companyMaster_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Company"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/companyMaster_iv"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/productRightsMaster_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <RelativeLayout
                android:id="@+id/productMaster_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_rectangle"
                >
                <ImageView
                    android:padding="10dp"
                    android:id="@+id/productMaster_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add_btn"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/productMaster_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Product"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/productMaster_iv"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rightsMaster_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_rectangle"
                >
                <ImageView
                    android:padding="10dp"
                    android:id="@+id/rightsMaster_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add_btn"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/rightsMaster_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rights"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/rightsMaster_iv"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/incentiveSchemesApprovalsMaster_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <RelativeLayout
                android:id="@+id/incentiveSchemesMaster_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_rectangle"
                >
                <ImageView
                    android:padding="10dp"
                    android:id="@+id/incentiveSchemesMaster_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add_btn"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/incentiveSchemesMaster_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incentiveSchemes"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/incentiveSchemesMaster_iv"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/incentiveApprovalsMaster_rl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/round_corner_rectangle"
                >
                <ImageView
                    android:padding="10dp"
                    android:id="@+id/incentiveApprovalsMaster_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/add_btn"
                    android:layout_centerInParent="true"
                    />
                <TextView
                    android:id="@+id/incentiveApprovalsMaster_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incentiveApprovals"
                    android:layout_marginTop="10dp"
                    android:layout_below="@+id/incentiveApprovalsMaster_iv"
                    android:layout_centerHorizontal="true"
                    android:padding="10dp"
                    />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>